@@ -16,6 +16,18 @@ from test.lib import *
 from test.lib.engines import utf8_engine
 import datetime
 
+class CompileTest(TestBase, AssertsCompiledSQL):
+
+    __dialect__ = mysql.dialect()
+
+    def test_reserved_words(self):
+        table = Table("mysql_table", MetaData(),
+            Column("col1", Integer),
+            Column("master_ssl_verify_server_cert", Integer))
+        x = select([table.c.col1, table.c.master_ssl_verify_server_cert])
+
+        self.assert_compile(x, 
+            '''SELECT mysql_table.col1, mysql_table.`master_ssl_verify_server_cert` FROM mysql_table''')
 
 class DialectTest(TestBase):
     __only_on__ = 'mysql'
