@@ -458,6 +458,12 @@ CHANGES
     exceptions, "could not receive data from server"
     [ticket:2044]
 
+  - Added RESERVED_WORDS for postgresql dialect. [ticket:2092]
+
+- informix
+
+- Added RESERVED_WORDS informix dialect. [ticket:2092]
+
 - mysql
   - oursql dialect accepts the same "ssl" arguments in 
     create_engine() as that of MySQLdb.  [ticket:2047]
